[package]
name = "recipe-bot"
version = "0.1.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.60"
telegram-bot = "0.7"
voca_rs = "1.13.0"
log = "0.4"
regex = "1.4.2"